Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Reward__c/Employee_Reward__c.object-meta.xml
<CustomObject>
    <label>Employee Reward</label>
    <nameField>
        <label>Employee Reward Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employee Rewards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>