Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Reward__c/fields/Date__c.field-meta.xml
<CustomField>
    <fullName>Date__c</fullName>
    <label>Date Earned</label>
    <type>Date</type>
</CustomField>