Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Reward__c/fields/Earned_Reward__c.field-meta.xml
<CustomField>
    <fullName>Earned_Reward__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Earned Reward</label>
    <referenceTo>Reward_Configuration__c</referenceTo>
    <relationshipLabel>Employee Rewards</relationshipLabel>
    <relationshipName>Employee_Rewards</relationshipName>
    <type>Lookup</type>
</CustomField>