Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Reward__c/fields/Points_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Points_Redeemed__c</fullName>
    <label>Points Redeemed</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>