Reward And Recognition System 2.0/force-app/main/default/objects/Employee_Reward__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Employee__c</columns>
    <columns>Earned_Reward__c</columns>
    <columns>Points_Redeemed__c</columns>
    <columns>Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>